--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body{
 }
 .feature ul li{
     padding-left: 2rem;
+    background-image: url();
     line-height: 1.5rem;
     margin-bottom: 1rem;
 }
